--- a/public/css/templatemo-572-designer.css
+++ b/public/css/templatemo-572-designer.css
@@ -613,17 +613,17 @@ section.whats-trending .right-image .thumb img {
     border-radius: 7.5px;
 }
 
-section.whats-trending .right-image::after {
-    width: 440px;
-    height: 300px;
-    right: -440px;
-    top: 50%;
-    -webkit-transform: translateY(-50%);
-    transform: translateY(-50%);
-    position: absolute;
-    background: url(../images/whats-trending-right-image.png);
-    content: '';
-}
+/*section.whats-trending .right-image::after {*/
+/*    width: 440px;*/
+/*    height: 300px;*/
+/*    right: -440px;*/
+/*    top: 50%;*/
+/*    -webkit-transform: translateY(-50%);*/
+/*    transform: translateY(-50%);*/
+/*    position: absolute;*/
+/*    background: url(../images/whats-trending-right-image.png);*/
+/*    content: '';*/
+/*}*/
 
 section.contact-us {
     margin-top: 60px;
