--- a/public/css/templatemo-572-designer.css
+++ b/public/css/templatemo-572-designer.css
@@ -65,7 +65,7 @@ p {
     text-align: center;
     font-weight: 400;
     color: #ffffff;
-    background-color: #7c47bf;
+    background-color: #019751;
     padding: 11px 25px;
     border-radius: 7.5px;
     display: inline-block;
@@ -93,7 +93,7 @@ p {
     text-transform: capitalize;
     font-weight: 400;
     color: #ffffff;
-    background-color: #7c47bf;
+    background-color: #019751;
     padding: 11px 25px;
     border-radius: 7.5px;
     display: inline-block;
@@ -109,7 +109,7 @@ p {
     font-size: 14px;
     text-transform: capitalize;
     font-weight: 400;
-    color: #7c47bf;
+    color: #019751;
     background-color: #ffffff;
     padding: 11px 25px;
     border-radius: 7.5px;
@@ -120,7 +120,7 @@ p {
 
 .white-button a:hover {
     color: #ffffff;
-    background-color: #7c47bf;
+    background-color: #019751;
 }
 
 section {
@@ -157,7 +157,7 @@ section {
 }
 
 .section-heading h2 em {
-    color: #7c47bf;
+    color: #019751;
     font-style: normal;
     padding-left: 100px;
     position: relative;
@@ -166,7 +166,7 @@ section {
 .section-heading h2 em::before {
     width: 80px;
     height: 2px;
-    background-color: #7c47bf;
+    background-color: #019751;
     content: '';
     position: absolute;
     left: 0;
@@ -193,7 +193,7 @@ section {
 
 .loader svg path,
 .loader svg rect {
-    fill: #ceabf8;
+    fill: #019751;
 }
 
 .main-navigation {
@@ -309,12 +309,12 @@ header.nav-scrolled .main-navigation .navbar-nav .nav-item .active {
 }
 
 .navbar-light .navbar-nav .nav-item .nav-link:hover {
-    color: #7c47bf;
+    color: #019751;
 }
 
 .navbar-light .navbar-nav .nav-item .active {
     font-weight: 400;
-    color: #7c47bf;
+    color: #019751;
     background-color: transparent;
     border-radius: 4px;
     border-top: none;
@@ -369,7 +369,7 @@ button:focus:not(:focus-visible) {
 
 .main-banner h2 em {
     font-style: normal;
-    color: #ceabf8;
+    color: #019751;
 }
 
 .search-form {
@@ -489,7 +489,7 @@ section.explore-work .right-content ul li ul.info li h6 a {
 }
 
 section.explore-work .right-content ul li ul.info li h6 a:hover {
-    color: #7c47bf;
+    color: #019751;
 }
 
 section.explore-work .right-content ul li ul.info li em {
@@ -544,7 +544,7 @@ section.whats-trending .right-image .thumb .hover-effect {
     right: 0;
     top: 0;
     bottom: 0;
-    background-color: rgba(124, 71, 191, 0.9);
+    background-color: rgba(1, 151, 81, 0.9);
     border-radius: 7.5px;
     opacity: 0;
     visibility: hidden;
@@ -780,7 +780,7 @@ footer ul.info li a {
 }
 
 footer ul.info li a:hover {
-    color: #7c47bf;
+    color: #019751;
 }
 
 footer ul.info li:last-child {
@@ -804,7 +804,7 @@ footer ul.social-links li a svg {
 }
 
 footer ul.social-links li a:hover {
-    color: #7c47bf;
+    color: #019751;
 }
 
 footer ul.social-links li:last-child {
@@ -843,7 +843,7 @@ footer form#subscribe button {
 }
 
 footer form#subscribe button:hover {
-    color: #7c47bf;
+    color: #019751;
 }
 
 footer .sub-footer {
@@ -852,7 +852,7 @@ footer .sub-footer {
 }
 
 footer .sub-footer p a {
-    color: #7c47bf;
+    color: #019751;
 }
 
 footer .sub-footer a.scroll-to-top {
@@ -860,7 +860,7 @@ footer .sub-footer a.scroll-to-top {
     width: 100%;
     display: inline-block;
     font-size: 15px;
-    color: #7c47bf;
+    color: #019751;
     -webkit-transition: all .5s;
     transition: all .5s;
 }
@@ -877,7 +877,7 @@ footer .sub-footer a.scroll-to-top svg {
 }
 
 footer .sub-footer a.scroll-to-top:hover {
-    color: #7c47bf;
+    color: #019751;
 }
 
 .page-banner {
@@ -912,7 +912,7 @@ footer .sub-footer a.scroll-to-top:hover {
 
 .page-banner h2 em {
     font-style: normal;
-    color: #ceabf8;
+    color: #019751;
 }
 
 .page-banner p {
@@ -940,7 +940,7 @@ footer .sub-footer a.scroll-to-top:hover {
 }
 
 .services .service-item .icon {
-    fill: #7c47bf;
+    fill: #019751;
 }
 
 .services .service-item h4 {
@@ -1076,7 +1076,7 @@ section.interior-design .right-content .accordion-body {
     position: absolute;
     left: 30px;
     top: -20px;
-    fill: #7c47bf;
+    fill: #019751;
 }
 
 .what-they-say .testimonial-item h4 {
@@ -1143,7 +1143,7 @@ section.interior-design .right-content .accordion-body {
 
 .what-they-say .carousel-indicators .active {
     opacity: 1;
-    background-color: #7c47bf;
+    background-color: #019751;
 }
 
 .call-to-action {
@@ -1319,7 +1319,7 @@ section.explore-item .projects-pagination .right-content h6 {
 }
 
 section.explore-item .projects-pagination .right-content h6:hover {
-    color: #7c47bf;
+    color: #019751;
 }
 
 section.explore-item .projects-pagination .right-content span {
@@ -1357,7 +1357,7 @@ section.explore-item .projects-pagination .left-content h6 {
 }
 
 section.explore-item .projects-pagination .left-content h6:hover {
-    color: #7c47bf;
+    color: #019751;
 }
 
 section.explore-item .projects-pagination .left-content span {
@@ -1411,7 +1411,7 @@ section.trending-page .trending-item .thumb {
 }
 
 section.trending-page .trending-item .thumb span.banner {
-    background-color: #7c47bf;
+    background-color: #019751;
     color: #ffffff;
     font-size: 14px;
     padding: 10px 16px;
@@ -1437,7 +1437,7 @@ section.trending-page .trending-item .thumb .hover-effect .inner-content {
     padding: 20px 30px;
     border-bottom-left-radius: 7.5px;
     border-bottom-right-radius: 7.5px;
-    background-color: #7c47bf;
+    background-color: #019751;
 }
 
 section.trending-page .trending-item .thumb .hover-effect .inner-content h4 {
@@ -1555,7 +1555,7 @@ section.contact-us-page .right-info ul li {
     width: 100%;
     padding: 30px;
     border-radius: 7.5px;
-    background-color: #7c47bf;
+    background-color: #019751;
     text-align: center;
     margin-bottom: 30px;
 }
