--- a/public/css/templatemo-572-designer.css
+++ b/public/css/templatemo-572-designer.css
@@ -353,7 +353,7 @@ button:focus:not(:focus-visible) {
 }
 
 .main-banner h6 {
-    font-size: 20px;
+    font-size: 2rem;
     color: #ffffff;
     font-weight: 700;
     letter-spacing: 2.5px;
@@ -361,7 +361,7 @@ button:focus:not(:focus-visible) {
 
 .main-banner h2 {
     color: #ffffff;
-    font-size: 50px;
+    font-size: 1.875rem;
     font-weight: 700;
     margin-top: 15px;
     margin-bottom: 25px;
